WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
168488
Invalidate WebAVSampleBufferStatusChangeListener when MediaPlayerPrivateMediaStreamAVFObjC is deallocated.
https://bugs.webkit.org/show_bug.cgi?id=168488
Summary
Invalidate WebAVSampleBufferStatusChangeListener when MediaPlayerPrivateMedia...
Jeremy Jones
Reported
2017-02-16 18:00:19 PST
Invalidate WebAVSampleBufferStatusChangeListener when MediaPlayerPrivateMediaStreamAVFObjC is deallocated.
Attachments
Patch
(1.81 KB, patch)
2017-02-16 18:03 PST
,
Jeremy Jones
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jeremy Jones
Comment 1
2017-02-16 18:01:09 PST
rdar://problem/30062771
Jeremy Jones
Comment 2
2017-02-16 18:03:22 PST
Created
attachment 301868
[details]
Patch
WebKit Commit Bot
Comment 3
2017-02-17 13:08:11 PST
Comment on
attachment 301868
[details]
Patch Clearing flags on attachment: 301868 Committed
r212568
: <
http://trac.webkit.org/changeset/212568
>
WebKit Commit Bot
Comment 4
2017-02-17 13:08:15 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug